--- a/projects/jtProject/frontend/sass/styleModules/media.sass
+++ b/projects/jtProject/frontend/sass/styleModules/media.sass
@@ -243,6 +243,7 @@
 
 @media (max-width: 768px)
   header.t-header
+    padding: 32px 24px 0 24px
     .t-pageNameHolder
       display: none
   .t-profileWrapperContainer
